--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Farel Abid - Creative Developer</title>
+    <title>Farel Abid — Creative Developer</title>
+    <meta
+      name="description"
+      content="Portfolio of Farel Abid — Creative Developer specializing in high-performance web applications, UI/UX design, and digital experiences."
+    />
+    <meta name="theme-color" content="#0C0A09" />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;700;900&family=Instrument+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400&family=JetBrains+Mono:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+  <body class="bg-[#0C0A09] text-[#FAFAF9] antialiased">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
