--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     />
     <meta name="theme-color" content="#0C0A09" />
 
+    <!-- Open Graph / Social Sharing -->
+    <meta property="og:title" content="Farel Abid — Creative Developer" />
+    <meta property="og:description" content="Creative Developer specializing in high-performance web applications, UI/UX design, and digital experiences. Based in Jakarta." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://farelabid.com" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Farel Abid — Creative Developer" />
+    <meta name="twitter:description" content="Creative Developer specializing in high-performance web applications, UI/UX design, and digital experiences." />
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
